syntax = "proto3";

option go_package = "../paymentproto";

package payment;

service PaymentService {
  rpc Pay(PayRequest) returns (PayResponse) {}
  rpc AuthorizeCard(AuthorizeCardRequest) returns (AuthorizeCardResponse) {}
  rpc RegisterRecipient(RegisterRecipientRequest) returns (RegisterRecipientResponse) {}
  rpc GetTransactionHistory(GetTransactionHistoryRequest) returns (GetTransactionHistoryResponse) {}
}

message PayRequest {
}

message PayResponse {
}

message AuthorizeCardRequest {
  string name = 1;
  string card_number = 2;
  int32 expiration_month = 3;
  int32 expiration_year = 4;
}

message AuthorizeCardResponse {
}

message RegisterRecipientRequest {
  string name = 1;
  string type = 2;
  BankAccount bank_account = 3;
}

message BankAccount {
  string name = 1;
  string number = 2;
  string brand = 3;
}

message RegisterRecipientResponse {
}

message GetTransactionHistoryRequest {
}

message GetTransactionHistoryResponse {
}
